fix vertical alignment of display box

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@ img.select {
 #display-box {
   height: auto;
   min-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #menu {
